--- a/themes/clean_journal/style.css
+++ b/themes/clean_journal/style.css
@@ -1605,7 +1605,7 @@ input.form-submit:hover {
 		-moz-border-radius: 20px;
 		-webkit-border-radius: 20px;
 	}
-	.relate-peoples li.owner span {
+	span.owner-label {
 		position: absolute;
 		bottom: 0;
 		left: 0;
@@ -1656,6 +1656,21 @@ input.form-submit:hover {
 			background: #4084a0;
 			text-decoration: none;
 		}
+
+.user-picture-wrapper {
+  position: relative;
+  border-radius: 50%;
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+	width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.user-picture-wrapper img {
+  -moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+}
 
 /* Journal Overview
 ----------------------------------------------------------------*/
