--- a/themes/clean_journal/style.css
+++ b/themes/clean_journal/style.css
@@ -1896,7 +1896,10 @@ h2.journal-block-title {
 #edit-date legend,
 .form-item-dc-language label,
 .form-item-dc-identifier label,
-.form-item-dc-coverage label {
+.form-item-dc-coverage label,
+.form-item-dc-type label,
+.form-item-dc-format label,
+.form-item-dc-right label {
 	width: 100px;
 	float: left;
 	text-align: right;
@@ -1908,12 +1911,18 @@ h2.journal-block-title {
 }
 
 .form-item-dc-identifier,
-.form-item-dc-coverage {
+.form-item-dc-coverage,
+.form-item-dc-type,
+.form-item-dc-format,
+.form-item-dc-right {
 	overflow: hidden;
 	margin-bottom: 0px;
 }
 
 .form-item-dc-identifier label,
+.form-item-dc-type label,
+.form-item-dc-format label,
+.form-item-dc-right label,
 .form-item-dc-coverage label {
 	width: 100px;
 	padding-right: 0px;
@@ -1935,7 +1944,10 @@ h2.journal-block-title {
 .form-item-description-sub label,
 .form-item-description-en label,
 .form-item-dc-identifier label,
-.form-item-dc-coverage label {
+.form-item-dc-coverage label,
+.form-item-dc-type label,
+.form-item-dc-format label,
+.form-item-dc-right label {
 	position: relative;
 	float: left;
 }
@@ -1956,6 +1968,9 @@ h2.journal-block-title {
 #edit-dc-publisher .fieldset-legend .label-help,
 #edit-dc-contributor .fieldset-legend .label-help,
 #edit-date .fieldset-legend .label-help,
+#edit-dc-type .fieldset-legend .label-help,
+#edit-dc-format .fieldset-legend .label-help,
+#edit-dc-right .fieldset-legend .label-help,
 .form-item-dc-language label .label-help,
 .label-help {
 	text-align: justify;
@@ -1975,6 +1990,9 @@ h2.journal-block-title {
 }
 
 .form-item-dc-identifier label .label-help,
+.form-item-dc-type label .label-help,
+.form-item-dc-format label .label-help,
+.form-item-dc-right label .label-help,
 .form-item-dc-coverage label .label-help {
 	top: 7px;
 	margin-right: -2px;
@@ -1988,7 +2006,10 @@ h2.journal-block-title {
 #edit-date .fieldset-wrapper,
 .form-item-dc-language #edit-dc-language,
 .form-item-dc-coverage #edit-dc-coverage,
-.form-item-dc-identifier #edit-dc-identifier {
+.form-item-dc-identifier #edit-dc-identifier,
+.form-item-dc-type #edit-dc-type,
+.form-item-dc-format #edit-dc-format,
+.form-item-dc-right #edit-dc-right {
 	width: 225px;
 	float: right;
 }
@@ -2002,7 +2023,10 @@ h2.journal-block-title {
 	#edit-dc-contributor .fieldset-wrapper .form-item,
 	#edit-date .fieldset-wrapper .form-item,
 	.form-item-dc-identifier #edit-dc-identifier,
-	.form-item-dc-coverage #edit-dc-coverage {
+	.form-item-dc-coverage #edit-dc-coverage
+  .form-item-dc-type #edit-dc-type,
+  .form-item-dc-format #edit-dc-format,
+  .form-item-dc-right #edit-dc-right {
 		margin-bottom: 0;
 		padding-top: 0;
 	}
@@ -2013,6 +2037,9 @@ h2.journal-block-title {
 		#edit-dc-contributor .fieldset-wrapper .form-item .multi-textfield,
 		.form-item-dc-identifier #edit-dc-identifier,
 		.form-item-dc-coverage #edit-dc-coverage,
+    .form-item-dc-type #edit-dc-type,
+    .form-item-dc-format #edit-dc-format,
+    .form-item-dc-right #edit-dc-right,
 		.form-item-dc-title .form-text,
 		.form-item-description-sub .form-textarea,
 		.form-item-description-en .form-textarea {
@@ -2045,7 +2072,10 @@ h2.journal-block-title {
 			margin-bottom: 10px;
 		}
 		.form-item-dc-identifier #edit-dc-identifier,
-		.form-item-dc-coverage #edit-dc-coverage {
+		.form-item-dc-coverage #edit-dc-coverage,
+    .form-item-dc-type #edit-dc-type,
+    .form-item-dc-format #edit-dc-format,
+    .form-item-dc-right #edit-dc-right {
 			margin-right: 5px;
 		}
 #edit-date .form-type-select,
