--- a/themes/clean_journal/style.css
+++ b/themes/clean_journal/style.css
@@ -1107,6 +1107,7 @@ body {
 #overview-discussion .user-picture-wrapper {
   display: inline;
 }
+
 .user-manage .user-dropdown ul {
 	position: absolute;
 	top: 80px;
@@ -2256,7 +2257,10 @@ h3.people-section-title {
 .people-block .journal-user {
 	float: left;
 }
-.people-block .journal-user .profile-picture-big {
+
+.people-block .journal-user .profile-picture-big, 
+.people-block .journal-user .user-picture-wrapper img,
+.people-block .journal-user img.user-picture-wrapper {
 	float: left;
 	margin-right: 15px;
 }
