--- a/themes/clean_journal/style.css
+++ b/themes/clean_journal/style.css
@@ -1840,6 +1840,11 @@ h2.journal-block-title {
   float: left;
 }
 
+.journal-detail-content-item {
+  border-bottom:1px solid #aaa;
+  padding: 10px 5px;
+}
+
 /* Journal Add
 ----------------------------------------------------------------*/
 #open-journal-information-form {
