--- a/themes/clean_journal/style.css
+++ b/themes/clean_journal/style.css
@@ -2283,8 +2283,9 @@ h3.people-section-title {
 .people-contributor .join-date {
 	color: #666666;
 }
-a.active-people-btn,
-a.inactive-people-btn  {
+
+.journal-user .active-people-btn,
+.journal-user .inactive-people-btn  {
 	display: block;
 	float: left;
 	text-transform: uppercase;
@@ -2295,12 +2296,21 @@ a.inactive-people-btn  {
 	background-color: #a0dacc;
 	margin-top: 10px;
 }
-a.inactive-people-btn {
+.journal-user .inactive-people-btn {
 	background-color: #c2c2c2;
 }
-a.active-people-btn:hover,
-a.inactive-people-btn:hover {
+.journal-user .active-people-btn:hover,
+.journal-user .inactive-people-btn:hover {
 	text-decoration: none;
+}
+
+.people-block .inactive-people img {
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%); 
+  -moz-filter: grayscale(100%);
+  -ms-filter: grayscale(100%); 
+  -o-filter: grayscale(100%);
+  opacity: 0.8;
 }
 /* Footer
 ----------------------------------------------------------------*/
