add permission for status form

--- a/themes/clean_journal/style.css
+++ b/themes/clean_journal/style.css
@@ -2539,6 +2539,10 @@ h3.people-section-title {
 
 /* Status Sidebar
 ----------------------------------------------------------------*/
+
+.sidebar-status-block {
+  overflow: hidden;
+}
 .sidebar-status-block .status-active,
 .sidebar-status-block .status-disabled {
 	width: 260px;
