--- a/themes/clean_journal/style.css
+++ b/themes/clean_journal/style.css
@@ -1778,7 +1778,7 @@ h2.journal-block-title {
 		background: url(images/bg-header-block.png) no-repeat;
 		padding-bottom: 15px;
 	}
-	.status-block h2.journal-block-title {
+	.status-block h2 {
 		width: 271px;
 		background-image: none;
 		background-color: #55b0d6;
@@ -1787,6 +1787,11 @@ h2.journal-block-title {
 		color: #FFF;
 		font-family: 'THSarabunNewRegular';
 	}
+	.status-block h2.status1 {background-color: #c6aadd;}
+	.status-block h2.status2 {background-color: #cd935e;}
+	.status-block h2.status3 {background-color: #69c5ae;}
+	.status-block h2.statusreject {background-color: #69c5ae;}
+	
 #overview-discussion,
 #file-list-item {
 	list-style: none;
