--- a/themes/clean_journal/style.css
+++ b/themes/clean_journal/style.css
@@ -1577,12 +1577,12 @@ input.form-submit:hover {
 		#journal-list .journal-item .status3 {
 			background-color: #69c5ae;
 		}
-	#journal-list .journal-item .reject {
-		background-color: #ff5f65;
-	}
-	#journal-list .journal-item .finish-publish {
-		background-color: #69c5ae;
-	}	
+		#journal-list .journal-item .statusreject {
+			background-color: #ff5f65;
+		}
+		#journal-list .journal-item .finish-publish {
+			background-color: #69c5ae;
+		}	
 	/* Journal title */
 	#journal-list .journal-item .journal-title {
 		width: 650px;
@@ -1790,7 +1790,7 @@ h2.journal-block-title {
 	.status-block h2.status1 {background-color: #c6aadd;}
 	.status-block h2.status2 {background-color: #cd935e;}
 	.status-block h2.status3 {background-color: #69c5ae;}
-	.status-block h2.statusreject {background-color: #69c5ae;}
+	.status-block h2.statusreject {background-color: #fc6064;}
 	
 #overview-discussion,
 #file-list-item {
@@ -2633,6 +2633,16 @@ h3.people-section-title {
 .reject-button {
 	display: block;
 	text-align: center;
+}
+.reject-tag {
+	float: left;
+	width: 260px;
+	padding: 10px 0;
+	text-align: center;
+	border: 4px solid rgb(175, 30, 30);
+	color: rgb(175, 30, 30);
+	text-transform: uppercase;
+	font-size: 22px;
 }
 /* Footer
 ----------------------------------------------------------------*/
