--- a/themes/clean_journal/style.css
+++ b/themes/clean_journal/style.css
@@ -1417,6 +1417,11 @@ input.form-submit:hover {
 			margin-bottom: 0;
 			margin-top: 18px;
 		}
+    #page.page-journal-list #user-heading h3 {
+      font-size: 20px;
+      margin-bottom: 0;
+      margin-top: 0px;
+    }
 
 /* journal menu tab */
 
@@ -2865,4 +2870,10 @@ ul.journal-informal-approve-list li .user-name-wrapper {
 	margin: 0;
 	font-family: 'THSarabunNewRegular';
 	font-size: 18px;
+}
+.feed img{
+  width:23px;
+  position: relative;
+  top: -82px;
+  left:175px;
 }
