--- a/themes/clean_journal/style.css
+++ b/themes/clean_journal/style.css
@@ -1164,7 +1164,7 @@ body {
 }
 h1.page-title {
 	width: 910px;
-	height: 32px;
+	/* height: 32px; */
 	font-size: 36px;
 	line-height: 36px;
 	margin: 30px auto;
@@ -2246,6 +2246,11 @@ h2.journal-block-title {
 	width: 600px;
 	max-width: 600px;
 }
+.discussion-item-content #open-journal-comment-form .form-textarea {
+	width: 504px;
+	max-width: 504px;
+}
+
 #open-journal-discussion-form .form-text {
 	width: 540px;
 	max-width: 540px;
@@ -2425,6 +2430,10 @@ ul.discussion-list {
 				color: #aa9c84;
 				font-size: 0.8em;
 			}
+.discussion-item-content #open-journal-comment-form {
+  padding: 0;
+  box-shadow: none;
+}
 .journal-comment-form-wrapper {
 	margin: 0 20px;
 	width: 560px;
@@ -2513,6 +2522,9 @@ ul.discussion-list {
 
 /* People
 ----------------------------------------------------------------*/
+.people-block {
+	padding-top: 0;
+}
 .people-block .people-block-inner {
 	width: 920px;
 	overflow: hidden;
@@ -2809,12 +2821,12 @@ ul.journal-informal-approve-list li .user-name-wrapper {
 	float: left;
 	width: 636px;
 	margin-bottom: 10px;
-	
+	font-family: 'THSarabunNewBold';
 }
 .account-profile-label {
 	float: left;
 	margin-right: 10px;
-	font-weight: bold;	
+	font-family: 'THSarabunNewRegular';
 	margin-bottom: 10px;
 }
 
@@ -2841,6 +2853,11 @@ ul.journal-informal-approve-list li .user-name-wrapper {
 
 #issue-sections-form-table .title-remove-wrapper .form-item {
 	margin-bottom: 10px;
+}
+
+.issue-journals-wrapper > div {
+	float:left;
+	width: 100%;
 }
 
 #open-journal-issue-form .form-actions #edit-delete {
@@ -2876,6 +2893,11 @@ ul.journal-informal-approve-list li .user-name-wrapper {
 	padding: 7px 0 0 30px;
 	color: #7d7d7d;
 }
+.back-to-all-issue a {
+	background: url(images/ic-back.png) transparent no-repeat 7px 7px;
+	padding: 7px 0 0 30px;
+	color: #7d7d7d;
+}
 .page-issue-view h3 {
 	font-size: 36px;
 	border-bottom: 1px solid #ccc;
@@ -2897,7 +2919,10 @@ ul.journal-informal-approve-list li .user-name-wrapper {
 .page-issue-view .item-list ul li.section-item,
 .page-issue-view .item-list ul li.journal-item,
 .page-issue-view .item-list ul li {
-	padding-left: 20px;
+	padding-left: 20px;	
+}
+.page-issue-view .item-list ul > li {
+	padding-right: 20px;
 }
 .page-issue-view .item-list ul.section-list ul li {
 	font-size: 18px;
